--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -12,7 +12,7 @@
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:brittany.chiang@gmail.com" target="_blank" class="highlight-link">alabialade@gmail.com</a>
+      <a href="mailto:alabialade@gmail.com" target="_blank" class="highlight-link">alabialade@gmail.com</a>
     </span>
   </h3>
 </header>
