--- a/_includes/background.html
+++ b/_includes/background.html
@@ -3,7 +3,7 @@
   <div class="section__content">
     <p>
       I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
+      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Technocrat IT & Consult</a> building things for the web with some awesome people. I recently graduated from
       <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
       <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
       <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
@@ -17,7 +17,7 @@
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
+      <strong>When I'm not in front of a computer screen</strong>, I'm probably reading a book, watching YouTube,
       or crossing off another item on my bucket list.
     </p>
 
