--- a/_includes/background.html
+++ b/_includes/background.html
@@ -3,11 +3,8 @@
   <div class="section__content">
     <p>
       I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      <a class="underline-link" href="https://www.linkedin.com/company/technocrat-it/mycompany/" target="_blank">Technocrat IT</a> building things for the web with some awesome people. I recently graduated from the
+      <a class="underline-link" href="https://uniben.edu/" target="_blank">University of Benin</a> with a degree in Computer Science.
     </p>
 
     <p>
@@ -17,8 +14,8 @@
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      <strong>When I'm not in front of a computer screen coding</strong>, I'm probably scrolling through YouTube, reading something tech-related,
+      or cooking up product ideas.
     </p>
 
     <!-- {% include employment-status.html %} -->
