--- a/_scss/partials/_base.scss
+++ b/_scss/partials/_base.scss
@@ -53,6 +53,9 @@ body {
     .section__content .underline-link:after {
       background: $off-white;
     }
+    .footer__copyright .underline-link:after {
+      background: $off-white;
+    }
   }
 }
 
