--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -3,53 +3,43 @@
   <div class="section__content">
     <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://blistabloc.com/" target="_blank">
+        <a href="https://acceronafrica.com" target="_blank">
           <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
+          <a href="https://acceronafrica.com" target="_blank">Acceron Africa</a>
         </div>
-        <p>Custom wordpress theme built with Timber and Woocommerce for blistabloc, the only reactive shoe insert that prevents
-          blisters from forming.</p>
+        <p>The corporate website for Acceron Africa Consult integrated with an headless Strapi CMS.</p>
       </figcaption>
     </div>
 
-    <div class="project screentime">
-      <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
-          </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
-          </div>
-          <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
-          </div>
-        </a>
-      </figure>
-      <figcaption class="project__caption">
-        <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
-        </div>
-        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
-      </figcaption>
-    </div>
-
-    <div class="project interventions">
+    <div class="project blistabloc">
       <figure class="project__pic">
-        <a href="https://interventions.design/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
+        <a href="https://devpost.com/software/cryptodeck" target="_blank">
+          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://interventions.design/" target="_blank">Interventions</a>
+          <a href="https://devpost.com/software/cryptodeck" target="_blank">Crypto Deck</a>
         </div>
-        <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
+        <p>A multi-chain, no-code platform for creating cryptocurrencies as submission for the <em>Polygon BUIDL IT: Summer 2022</em> hackathon.</p>
+      </figcaption>
+    </div>
+
+    <div class="project blistabloc">
+      <figure class="project__pic">
+        <a href="https://devpost.com/software/veot" target="_blank">
+          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://devpost.com/software/veot" target="_blank">Veot</a>
+        </div>
+        <p>A decentralized polling platform built upon the Hedera Hashgraph as submission for the <em>Hedera22: Hello Smart Contracts</em> hackathon.</p>
       </figcaption>
     </div>
   </div>
