--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Designed &amp; Developed by</span>
+      <span>Made with</span>
+      <img class="emoji" src="{{site.baseurl}}/img/emojis/heart.png" alt="emoji">
+      <span>by</span>
     </div>
     <div class="bottom">
-      <span>Brittany Chiang</span>
-      <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2018</span>
+      <a class="underline-link" href="https://brittanychiang.com/" target="_blank">Brittany Chiang</a>
     </div>
   </div>
   <div class="footer__links">
