--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -9,10 +9,10 @@
   </h2>
 
   <h3 class="intro__contact">
-    <span>Get in touch </span>
+    <span>Read my articles </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:alabialade@gmail.com" target="_blank" class="highlight-link">alabialade@gmail.com</a>
+      <a href="https://blog.eedris.dev" target="_blank" class="highlight-link">blog.eedris.dev</a>
     </span>
   </h3>
 </header>
