added featured projects images

--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,10 +1,10 @@
 <section class="section featured-projects">
   <div class="section__title">Featured Projects</div>
   <div class="section__content">
-    <div class="project blistabloc">
+    <div class="project acceron">
       <figure class="project__pic">
         <a href="https://acceronafrica.com" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+          <img src="{{site.baseurl}}/img/featured/acceron/acceron.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
@@ -15,10 +15,10 @@
       </figcaption>
     </div>
 
-    <div class="project blistabloc">
+    <div class="project cryptodeck">
       <figure class="project__pic">
         <a href="https://devpost.com/software/cryptodeck" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+          <img src="{{site.baseurl}}/img/featured/cryptodeck/cryptodeck.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
@@ -29,10 +29,10 @@
       </figcaption>
     </div>
 
-    <div class="project blistabloc">
+    <div class="project veot">
       <figure class="project__pic">
         <a href="https://devpost.com/software/veot" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+          <img src="{{site.baseurl}}/img/featured/veot/veot.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
