updated attribution and work history

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Made with</span>
+      <!-- <span>Made with</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/heart.png" alt="emoji">
-      <span>by</span>
+      <span>by</span> -->
+      Originally made by
     </div>
     <div class="bottom">
       <a class="underline-link" href="https://brittanychiang.com/" target="_blank">Brittany Chiang</a>
