--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
 <footer class="footer">
-  <div class="footer__copyright">
-    <div class="top">
+  <!-- <div class="footer__copyright">
+    <div class="top"> -->
       <!-- <span>Made with</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/heart.png" alt="emoji">
       <span>by</span> -->
-      Originally made by
+      <!-- Originally made by
     </div>
     <div class="bottom">
       <a class="underline-link" href="https://brittanychiang.com/" target="_blank">Brittany Chiang</a>
     </div>
-  </div>
+  </div> -->
   <div class="footer__links">
     {% for link in site.social %}
     <a href="{{link.url}}" target="_blank" title="{{link.title}}">
