updated experience, featured projects

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -3,7 +3,7 @@
   <div class="section__content">
     <p>
       I'm currently an Engineer at
-      <a class="underline-link" href="https://www.oncrowdr.com/" target="_blank">Crowdr</a> building things for the web with some awesome people. I recently graduated from the
+      <a class="underline-link" href="https://www.oncrowdr.com/" target="_blank">Crowdr</a> building things for the web with some awesome people. I graduated from the
       <a class="underline-link" href="https://uniben.edu/" target="_blank">University of Benin</a> with a degree in Computer Science.
     </p>
 
