--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,9 +1,23 @@
 <section class="section featured-projects">
   <div class="section__title">Featured Projects</div>
   <div class="section__content">
+    <div class="project crowdr">
+      <figure class="project__pic">
+        <a href="https://oncrowdr.com" target="_blank">
+          <img src="{{site.baseurl}}/img/featured/crowdr/crowdr.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://oncrowdr.com" target="_blank">Crowdr</a>
+        </div>
+        <p>Crowdr helps you fundraise and find volunteering opportunities that make a change in our world.</p>
+      </figcaption>
+    </div>
+
     <div class="project acceron">
       <figure class="project__pic">
-        <a href="https://acceronafrica.com" target="_blank">
+        <a href="https://acceronafrica.vercel.app" target="_blank">
           <img src="{{site.baseurl}}/img/featured/acceron/acceron.png" alt="">
         </a>
       </figure>
@@ -15,7 +29,21 @@
       </figcaption>
     </div>
 
-    <div class="project cryptodeck">
+    <div class="project afterwind">
+      <figure class="project__pic">
+        <a href="https://afterwind.js.org" target="_blank">
+          <img src="{{site.baseurl}}/img/featured/afterwind/afterwind.png" alt="">
+        </a>
+      </figure>
+      <figcaption class="project__caption">
+        <div class="project__name">
+          <a href="https://afterwind.js.org" target="_blank">Afterwind</a>
+        </div>
+        <p>A utility library for writing composable Tailwind CSS.</p>
+      </figcaption>
+    </div>
+
+    <!-- <div class="project cryptodeck">
       <figure class="project__pic">
         <a href="https://devpost.com/software/cryptodeck" target="_blank">
           <img src="{{site.baseurl}}/img/featured/cryptodeck/cryptodeck.png" alt="">
@@ -27,9 +55,9 @@
         </div>
         <p>A multi-chain, no-code platform for creating cryptocurrencies as submission for the <em>Polygon BUIDL IT: Summer 2022</em> hackathon.</p>
       </figcaption>
-    </div>
+    </div> -->
 
-    <div class="project veot">
+    <!-- <div class="project veot">
       <figure class="project__pic">
         <a href="https://devpost.com/software/veot" target="_blank">
           <img src="{{site.baseurl}}/img/featured/veot/veot.png" alt="">
@@ -41,6 +69,6 @@
         </div>
         <p>A decentralized polling platform built upon the Hedera Hashgraph as submission for the <em>Hedera22: Hello Smart Contracts</em> hackathon.</p>
       </figcaption>
-    </div>
+    </div> -->
   </div>
 </section>
