aligned footer content

--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -9,7 +9,7 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://oncrowdr.com" target="_blank">Crowdr</a>
+          <a href="https://www.oncrowdr.com" target="_blank">Crowdr</a>
         </div>
         <p>Crowdr helps you fundraise and find volunteering opportunities that make a change in our world.</p>
       </figcaption>
