--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <a class="underline-link" href="https://brittanychiang.com/" target="_blank">Brittany Chiang</a>
     </div>
   </div> -->
-  <div class="footer__links">
+  <div class="footer__links" style="align-self: end;">
     {% for link in site.social %}
     <a href="{{link.url}}" target="_blank" title="{{link.title}}">
       <span class="text">{{link.title}}</span>
