--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -3,7 +3,7 @@
   <div class="section__content">
     <div class="project crowdr">
       <figure class="project__pic">
-        <a href="https://oncrowdr.com" target="_blank">
+        <a href="https://www.oncrowdr.com" target="_blank">
           <img src="{{site.baseurl}}/img/featured/crowdr/crowdr.png" alt="">
         </a>
       </figure>
