--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -12,7 +12,7 @@
     <span>Read my articles </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="https://blog.eedris.dev" target="_blank" class="highlight-link">blog.eedris.dev</a>
+      <a href="https://blog.eedris.xyz" target="_blank" class="highlight-link">blog.eedris.xyz</a>
     </span>
   </h3>
 </header>
